plugins {
    id 'java'
    id 'scala'
}

ext {
    authorName = "Jim 2ha0"
    authorEmail = "jim2ha0@aliyun.com"
    authorUrl = "https://jim2ha0.blog.csdn.net/"
}

sourceCompatibility = 17
targetCompatibility = 17

jar {
    manifest {
        attributes (
                'Main-Class': 'Welcome',
                'Implementation-Title': project.name,
                'Implementation-Version': project.version,
                'Author': project.ext.authorName,
                'Author-Email': project.ext.authorEmail
        )
    }
}

dependencies {


    implementation 'org.scala-lang:scala-library:2.13.8'
//    implementation 'org.scala-lang:scala-reflect:2.13.8'

    testImplementation 'org.scalatest:scalatest_2.13:3.2.9'
    testImplementation 'org.junit.jupiter:junit-jupiter:5.8.2'
}

repositories {
    maven { url 'https://maven.aliyun.com/repository/public' }
}


test {
    useJUnitPlatform()
    jvmArgs (
            '--add-opens', 'java.base/sun.nio.ch=ALL-UNNAMED',
            '--add-opens', 'java.base/java.lang=ALL-UNNAMED'
    )
}
